force-app/main/default/objects/Payment__c/fields/AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>AccountingCode__c</fullName>
    <label>Accounting Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>