force-app/main/default/objects/Payment__c/fields/AppliedAmount__c.field-meta.xml
<CustomField>
    <fullName>AppliedAmount__c</fullName>
    <label>Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>