force-app/main/default/objects/Payment__c/fields/AppliedCreditBalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>AppliedCreditBalanceAmount__c</fullName>
    <label>Applied Credit Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>