force-app/main/default/objects/Payment__c/fields/AuthTransactionId__c.field-meta.xml
<CustomField>
    <fullName>AuthTransactionId__c</fullName>
    <label>Auth Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>