force-app/main/default/objects/Payment__c/fields/BankIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>BankIdentificationNumber__c</fullName>
    <label>Bank Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>