force-app/main/default/objects/Payment__c/fields/CancelledOn__c.field-meta.xml
<CustomField>
    <fullName>CancelledOn__c</fullName>
    <label>Cancelled On</label>
    <type>DateTime</type>
</CustomField>