force-app/main/default/objects/Payment__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <label>Payment Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>