force-app/main/default/objects/Payment__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Payment Created Date</label>
    <type>DateTime</type>
</CustomField>