force-app/main/default/objects/Payment__c/fields/CreditBalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditBalanceAmount__c</fullName>
    <label>Credit Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>