force-app/main/default/objects/Payment__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>