force-app/main/default/objects/Payment__c/fields/evaluation__c.field-meta.xml
<CustomField>
    <fullName>evaluation__c</fullName>
    <description>Stakeholder Finance https://jira.orderbird.com/browse/CDS-1019
Summarises Type, GatewayState, Amount and Refund in one field to provide an easier overview in Related Lists</description>
    <formula>IF(AND(Type__c = &apos;Electronic&apos;, GatewayState__c = &apos;Settled&apos;,  Amount__c -  RefundAmount__c != 0), &apos;SEPA settled&apos;,
 IF(AND(Type__c = &apos;Electronic&apos;, GatewayState__c = &apos;Settled&apos;,  Amount__c -  RefundAmount__c = 0), &apos;SEPA refunded&apos;,
  IF(AND(Type__c = &apos;Electronic&apos;, GatewayState__c = &apos;Submitted&apos;,  Amount__c -  RefundAmount__c != 0), &apos;SEPA pending&apos;,
   IF(AND(Type__c = &apos;Electronic&apos;, OR(GatewayState__c = &apos;FailedToSettle&apos;,GatewayState__c = &apos;Submitted&apos;),  Amount__c -  RefundAmount__c = 0), &apos;SEPA failed&apos;,
    IF(AND(Type__c = &apos;Electronic&apos;, GatewayState__c = &apos;NotSubmitted&apos;,  Amount__c -  RefundAmount__c != 0), &apos;SEPA aborted&apos;,
     IF(AND(Type__c = &apos;External&apos;, GatewayState__c = &apos;NotSubmitted&apos;,  Amount__c -  RefundAmount__c != 0), &apos;Manually settled&apos;,
      IF(AND(Type__c = &apos;External&apos;, GatewayState__c = &apos;NotSubmitted&apos;,  Amount__c -  RefundAmount__c = 0), &apos;Manually refunded&apos;,
&apos;undefined&apos;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation</label>
    <type>Text</type>
</CustomField>