force-app/main/default/objects/Payment__c/fields/GatewayResponse__c.field-meta.xml
<CustomField>
    <fullName>GatewayResponse__c</fullName>
    <label>Gateway Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>