force-app/main/default/objects/Payment__c/fields/IsQualifyingPayment__c.field-meta.xml
<CustomField>
    <fullName>IsQualifyingPayment__c</fullName>
    <formula>Status__c = &apos;Processed&apos; &amp;&amp; (Type__c = &apos;External&apos; || (Type__c = &apos;Electronic&apos; &amp;&amp; GatewayState__c = &apos;Settled&apos;)) &amp;&amp; RefundAmount__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsQualifyingPayment</label>
    <type>Checkbox</type>
</CustomField>