force-app/main/default/objects/Payment__c/fields/NeedsAttention__c.field-meta.xml
<CustomField>
    <fullName>NeedsAttention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Attention</label>
    <type>Checkbox</type>
</CustomField>