force-app/main/default/objects/Payment__c/fields/SubmittedOn__c.field-meta.xml
<CustomField>
    <fullName>SubmittedOn__c</fullName>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>