force-app/main/default/objects/Payment__c/fields/UnappliedAmount__c.field-meta.xml
<CustomField>
    <fullName>UnappliedAmount__c</fullName>
    <label>Unapplied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>