force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>EffectiveDate__c</columns>
    <columns>GatewayState__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>AppliedCreditBalanceAmount__c</columns>
    <columns>RefundAmount__c</columns>
    <columns>Net_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>